[package]
name = "rust101-project"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.17", features = ['multipart'] }
axum-macros = "0.3.7"
base64 = "0.21.0"
dirs = "5.0.0"
image = "0.24.6"
imageproc = "0.23.0"
ndarray = "0.15.6"
nokhwa = { version = "0.10.3", features = ['input-native'] }
rand = "0.8.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
smallvec = "1.10.0"
tokio = { version = "1.27.0", features = ["full"] }
tract-onnx = "0.19.7"
